Add text to tell the user to go look at the previous tab

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title></title>
 </head>
 <body>
+  Go look at your previous tab you came from!
   <script type="text/javascript">
     setTimeout(function(){
       var rick_roll_url = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
