--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   Go look at your previous tab you came from!
   <script type="text/javascript">
     setTimeout(function(){
-      var rick_roll_url = "https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+      var rick_roll_url = "https://www.youtube.com/watch?v=dQw4w9WgXcQ?autoplay=1"
       window.opener.location.replace(rick_roll_url);
     }, 3000);
   </script>
